# CallCentre

./: .gitignore  CMakeLists.txt  README.md  config_call_centre.json  test.cpp
src/: Call.cpp  Call.h  IncomingCallsQueue.cpp  IncomingCallsQueue.h  IncomingQueue.h  Listener.cpp  Listener.h  Log.cpp  Log.h  Operators.cpp  Operators.h  OperatorsAlter.h  Operators_2.h  RandGen.cpp  RandGen.h  ReadConfig.h  ReadJSON.h  Session.cpp  Session.h  ThreadSafeQueue.h  handle_req_resp.cpp  handle_req_resp.h  includes.h  main.cpp  server.cpp
tests/: IncomingCallsQueue_test.cpp  first_test.cpp
